@@ -1,3 +1,4 @@
 DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 846 RMD160 33616bcc1f7c64223e92c75fb454c7e15022da7a SHA1 3b92136e38a8ab0d0c6b40be304b8925ad86171a SHA256 6ef8fa99fa3bb0786aed296cc2237b35115382474c5826cf3a1ed19d3bd8289f
-MISC ChangeLog 256 RMD160 fa30a12d796495b3209b8eca42ecc0a4f88409ca SHA1 4da6bc57c8fceae267796556e45a1e8ff7b6652f SHA256 d4f995ccbeae21f218387205adf04ef768ca66c7167c88ff69f2414134ac4faf
+EBUILD subsonic-4.4.ebuild 2006 RMD160 e93e530b63992532027a122517fc865c3ac81d3f SHA1 b35904c139789c69b1ad37ac17cfd54ef63537d3 SHA256 adb5e702d792e42628f148f1bde3ca86723db856c1567eec97653c0afcbcf7f1
+MISC ChangeLog 455 RMD160 8172ded0c03ab35bde94ac04118991b797d0b4a3 SHA1 9abe3d9cb0ee4201d8b8823f70ff629cfb2f8f80 SHA256 ce687ad395e3d7750933ebf207883770a4a57967743d992c2c198f888d5f4d41
+MISC metadata.xml 375 RMD160 03670841a6f60ee7ae3e874507e5a20ab23c1961 SHA1 dc49b60cdd8512fd4f3cde9eb370d65b6838252f SHA256 5913d8cf54fb7bddccbf83263f2e21978342321e2b77f4d6f5d64d3e21c318b4
