@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>no-herd</herd>
+<maintainer><email>bapabooiee@gmail.com</email></maintainer>
+<use>
+<flag name='tomcat-deploy'>Creates a dependency on <pkg>www-servers/tomcat</pkg>,
+	and then attempts to automatically deploy Subsonic</flag>
+</use>
+</pkgmetadata>
