@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> subsonic-4.4.ebuild,
+  +metadata.xml:
+  Created tomcat-deploy USE flag, which attempts to automatically deploy
+  Subsonic. Also fixed DESCRIPTION.
+
 *subsonic-4.4 (09 Feb 2011)
 
   09 Feb 2011; Dean Matzkov <bapabooiee@gmail.com> +subsonic-4.4.ebuild:
